welcome.lessons.welcome.summative.Moria.scala.code
def sortir()
{
  while (!estFaceMur())
  {
    deplaceBiscuit()
  }
}

def deplaceBiscuit()
{
  setDirection("Direction.EAST")
  while (!estSurBiscuit())
  {
    avance()
  }
  prendBiscuit()
  setDirection(Direction.WEST)
  while (!estSurBiscuit())
  {
    avance()
  }
  setDirection(Direction.EAST)
  avance()
  poseBiscuit()
}